Mark authors in index.html
Updated author names to indicate co-first authorship.

--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
                 <papertitle>Aligning Relational Learning with Lipschitz Fairness</papertitle>
               </a>
               <br>
-              Yaning Jia, <b>Chunhui Zhang</b>, Soroush Vosoughi
+              Yaning Jia*, <b>Chunhui Zhang*</b>, Soroush Vosoughi
               <br>
-                <em>ICLR 2024</em>
+                <em>ICLR 2024</em> (<i>*co-first author</i>)
               <br>
               <a href="https://github.com/chunhuizng/lipschitz-fairness">Code</a> / <a href="data/ICLR24_Lipschitz_Align_camera_ready.pdf">Paper</a>
             </td>
@@ -382,9 +382,9 @@
                 <papertitle>Mitigating Emergent Robustness Degradation on Graphs while Scaling Up</papertitle>
               </a>
               <br>
-              Xiangchi Yuan, <b>Chunhui Zhang</b>, Yijun Tian, Yanfang Ye, et al.
+              Xiangchi Yuan*, <b>Chunhui Zhang*</b>, Yijun Tian, Yanfang Ye, et al.
               <br>
-                <em>ICLR 2024</em>
+                <em>ICLR 2024</em> (<i>*co-first author</i>)
               <br>
               <a href="https://github.com/chunhuizng/emergent-degradation">Code</a> / <a href="https://openreview.net/forum?id=Koh0i2u8qX">Paper</a>
             </td>
