Refine descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <a href="https://github.com/chunhuizng/episodic-mcts/tree/main">Code</a> / <a href="https://arxiv.org/pdf/2506.01312">Paper</a>
               <br>
               <p style="font-size:90%; margin-top:8px; color:#555;">
-                Post-trained reasoning LLMs (across 3B, 8B, 70B) on MCTS-sampled data from physical simulators. This bridges the gap between simulation and real-world planning.
+                Post-trained reasoning LLMs (across 3B, 8B, 70B) on MCTS-sampled data from physical simulators.
               </p>
             </td>
           </tr>
@@ -175,7 +175,7 @@
               <a href="https://github.com/chunhuizng/mllm-video-captioner">Code</a> / <a href="https://arxiv.org/pdf/2502.13363">Paper</a> / <a href="data/naacl-video-captioner-slides.pdf">Slides</a>
               <br>
               <p style="font-size:90%; margin-top:8px; color:#555;">
-                RL post-training recipe that achieved <b>Top-2</b> on PapersWithCode video captioning leaderboard, outperforming industry MLLM captioners. Clean, reproducible code that others can actually use.
+                RL post-training recipe that achieved <b>Top-2</b> on PapersWithCode video captioning leaderboard, outperforming industry MLLM video captioners.
               </p>
             </td>
           </tr>
@@ -248,7 +248,7 @@
               <a href="https://github.com/xid32/NAACL_2025_TWM">Code</a> / <a href="https://xid32.github.io/images/publications/Temporal_Working_Memory.pdf">Paper</a>
               <br>
               <p style="font-size:90%; margin-top:8px; color:#555;">
-                Inspired by working memory in my EMNLP 2024 paper, this work is a follow-up study on long-context multimodal understanding.
+                Inspired by working memory in my EMNLP 2024 paper, this work is a follow-up study on long-context video-language understanding.
               </p>
             </td>
     </tr>
