Update paper link in index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <br>
                 <em>EMNLP 2025 Findings</em>
 		<br>
-              <a href="https://aclanthology.org/2025.findings-emnlp.1042.pdf">Paper</a>
+              <a href="data/EMNLP25_Embodied_Hierarchy.pdf">Paper</a>
               <br>
               <p style="font-size:90%; margin-top:8px; color:#555;">
                 Refines vision-language-action LLM representations to enable more effective PPO-based RL training in embodied AI.
