--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Chunhui Zhang - RL & Multimodal LLM Researcher</title>
+  <title>Chunhui Zhang</title>
   
   <meta name="author" content="Chunhui Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
