Update introduction in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta name="author" content="Chunhui Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Chunhui Zhang - Ph.D. student at Dartmouth specializing in RL training and multimodal LLMs. Passionate about building fast, scalable training systems.">
+  <meta name="description" content="Chunhui Zhang - Ph.D. candidate at Dartmouth specializing in RL training and multimodal LLMs. Passionate about building fast, scalable training systems.">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" href="images/dartmouth_logo.jpeg" type="image/x-icon"/>
@@ -23,9 +23,9 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang / 張春晖). I am a Ph.D. candidate in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth 🌲</a>, where I have the great fortune of working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟 Professor Soroush Vosoughi</a>. From June to September of 2025, I was a research intern at <a href="https://deepmind.google/">Google DeepMind</a>, Mountain View, CA.</p>
-
-<p>I obtained my MSCS degree (research-based) with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p>
+<p>Greetings! I am Chunhui Zhang (pronounced Ch'un-hui Chang / 張春晖). I am a CS Ph.D. candidate at <a href="https://home.dartmouth.edu/">Dartmouth 🌲</a>, where I am advised by <a href="https://www.cs.dartmouth.edu/~soroush/">🌟 Prof. Soroush Vosoughi</a>. Previously, I was a research intern at <a href="https://deepmind.google/">Google DeepMind</a>, Mountain View, CA, exploring SFT and RL on <a href="https://deepmind.google/models/gemma/gemma-3n/">Gemma 3n</a>. I also interned at Amazon, where I trained computer-use agents for GUI tasks.</p>
+				
+				<!-- <p>I obtained my MSCS degree (research-based) with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p> -->
 
               <p style="text-align:center">
                 <a href="mailto:chunhui.zhang.gr@dartmouth.edu"><i class="fa fa-envelope" style="font-size:21px"></i></a> &nbsp/&nbsp
